[package]
name = "myrulesiot"
authors = ["Adrián Romero <adrianromero@users.noreply.github.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

tokio = { version = "1.12.0", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "net", "time"] }
rumqttc = "0.8.0"
bytes = "1.1.0"
chrono = "0.4.19"
serde = { version ="1.0.130", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"